--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Project 14</title>
   </head>
@@ -30,7 +37,67 @@
         <div class="main-left">
           <img src="./img/pexels-rfstudio-3819572.jpg" alt="" />
         </div>
-        <div class="main-right"></div>
+        <div class="main-right">
+          <div class="heading">
+            <h1>Crea</h1>
+            <div>
+              <h1>tivity</h1>
+              <p>
+                is our <br />
+                ingredient.
+              </p>
+            </div>
+            <div class="btn-heading">
+              <button>Check Our Package</button>
+            </div>
+          </div>
+
+          <div class="social-icons">
+            <img src="./svg/email.svg" alt="" />
+            <img src="./svg/fb.svg" alt="" />
+            <img src="./svg/insta.svg" alt="" />
+            <img src="./svg/twitter.svg" alt="" />
+          </div>
+
+          <div class="bottom">
+            <ul>
+              <div class="vertical-line"></div>
+              <li>
+                <span class="dot active"></span>
+                <p>Photography</p>
+              </li>
+              <li>
+                <span class="dot"></span>
+                <p>Videography</p>
+              </li>
+              <li>
+                <span class="dot"></span>
+                <p>Graphics Design</p>
+              </li>
+              <li>
+                <span class="dot"></span>
+                <p>Illustration</p>
+              </li>
+              <li>
+                <span class="dot"></span>
+                <p>Animation</p>
+              </li>
+            </ul>
+
+            <div class="qoute">
+              <span class="qoute-icon">
+                <i class="fa-solid fa-quote-right"></i
+              ></span>
+
+              <p>
+                We help you to create the best graphics, <br />
+                photos, videos, animations and illustrations
+              </p>
+              <img src="./img/dancing.jpg" alt="" />
+            </div>
+            <div class="arrow-img"><img src="./svg/arrow.svg" alt="" /></div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
