--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
                 We help you to create the best graphics, <br />
                 photos, videos, animations and illustrations
               </p>
-              <img src="./img/dancing.jpg" alt="" />
+              <div>
+                <img src="./img/dancing.jpg" alt="" />
+              </div>
             </div>
             <div class="arrow-img"><img src="./svg/arrow.svg" alt="" /></div>
           </div>
